# hyper-pi

./: .env.example  .gitignore  AGENTS.md  F4_F5_FINDINGS.md  PRD.md  README.md  TODO.md
.pi/: task-4-complete-tests.ts  task-4-handler-impl.ts  task-4-tests-draft.ts
docs/: cloudflare-tunnel.md
hyper-pi-protocol/: package-lock.json  package.json
hypivisor/: AGENTS.md  Cargo.toml
hypivisor/src/: auth.rs  cleanup.rs  fs_browser.rs  handlers.rs  lib.rs  log.rs  main.rs  rpc.rs  spawn.rs  state.rs
hypivisor/tests/: server_integration.rs
integration-tests/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
pi-de/: AGENTS.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
pi-socket/: AGENTS.md  eslint.config.js  history.d.ts  history.d.ts.map  history.js  history.js.map  history.test.d.ts.map  history.test.js  history.test.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  log.d.ts  log.d.ts.map  log.js  log.js.map  package-lock.json  package.json  safety.d.ts  safety.d.ts.map  safety.js  safety.js.map  tsconfig.json  types.d.ts  types.d.ts.map
plans/: hypivisor-persistence.md
scripts/: e2e-smoke.sh
specs/: best-practices-review.md  design.md  hyper-pi chat with gemini.md  pi-web-ui-adoption.md  requirements.md  review-claude.md  review-codex.md  review-full-synthesis.md  review-gemini.md  review-stale-claude.md  review-stale-codex.md  review-stale-gemini.md  review-synthesis.md  vision.md
tmp/: codex-review.md  review-claude.md  review-codex.md  review-gemini-latest.md  (+1 more)
(+156 files in other folders)
