[package]
name = "hypivisor"
version = "0.1.0"
edition = "2021"
description = "Hyper-Pi central registry daemon"
license = "MIT"

[dependencies]
asupersync = "0.2.5"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-tungstenite = "0.28"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
